# etf_lp_am

./: .gitignore  README.md  main.py  pyproject.toml
docs/report/: etf-am-frp-emp.qmd
docs/vibe/: etf_am_plan.md
langgraph-v1-tutorial/01-QuickStart/: 01-QuickStart-LangGraph-Tutorial.ipynb  01-QuickStart-LangGraph-Tutorial.py
notebooks/: 01_load_the_data.ipynb  02_EDA_ETFLP_data.ipynb  02_EDA_data.ipynb  03_EDA_ETFAM_data.ipynb  04_ETFAM_FACTORREG.ipynb  05_ETFAM_FRP_EMP.ipynb
scripts/: run_chkxp_ingest.py
tests/: conftest.py
tests/integration/: test_ingest.py
tests/unit/: test_config.py  test_dataset.py  test_parser.py
utils/chkxp_ingest/: __init__.py  config.py  dataset.py  parser.py
